# ONI

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  oni.toml  package-lock.json  package.json  tsconfig.base.json
bench/: ABLATION_REPORT.md  OVERNIGHT_REPORT_V2.md  REPORT.md  STRESS_TEST_REPORT.md  overnight_v2.sh  run_bench.sh  stress_test.md  stress_test.sh  terminalbench_hard.sh
crates/oni-agent/: Cargo.toml
crates/oni-agent/src/: agent.rs  agent_defs.rs  budget.rs  callbacks.rs  conversation.rs  knowledge_graph.rs  lib.rs  linter.rs  message_bus.rs  neo4j_graph.rs  orchestrator.rs  parsing.rs  plan_store.rs  preferences.rs  prompts.rs  reflection.rs  review.rs  system_prompt.rs  telemetry.rs  trace.rs
crates/oni-agent/src/tools/: ask_user.rs  bash.rs  edit_file.rs  forge_tool.rs  get_url.rs  list_dir.rs  mod.rs  read_file.rs  search_files.rs  undo.rs  write_file.rs
crates/oni-context/: Cargo.toml
crates/oni-context/src/: embeddings.rs  indexer.rs  lib.rs  retriever.rs  walker.rs  watcher.rs
crates/oni-core/: Cargo.toml
crates/oni-db/: Cargo.toml
crates/oni-llm/: Cargo.toml
crates/oni-llm/src/: client.rs  health.rs  lib.rs  memory.rs  models.rs  router.rs  server_manager.rs
crates/oni-tui/: Cargo.toml
crates/oni-tui/src/: app.rs  event.rs  lib.rs  theme.rs
crates/oni-tui/src/ui/: chat.rs  chroma.rs  command_menu.rs  diff_view.rs  error_state.rs  file_picker.rs  input.rs  mission_control.rs  mod.rs  permission_prompt.rs  preferences.rs  response_label.rs  sidebar.rs  splash.rs  status.rs  thinking.rs
crates/oni-tui/src/widgets/: big_text.rs  border_pulse.rs  data_cascade.rs  glitch.rs  glitch_pulse.rs  hazard.rs  interference.rs  mod.rs  neon_glow.rs  scan_reveal.rs  spectrum.rs
docs/: MODEL_UPGRADES.md  ONI_SOA.md
docs/Vision/: API_CONTRACTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  FEATURES.md  FUTURE_WORK.md  PHASES.md  README.md  SECURITY.md  TECH_STACK.md  TESTING.md  USER_TESTING.md  oni-terminal-ui.html  oni-tui-v3.html  oni_design_doc_marathon.html
docs/plans/: 2026-03-17-oni-v2-rust-ratatui-rewrite.md  2026-03-18-oni-complete-implementation.md  2026-03-19-llama-cpp-migration.md  2026-03-19-oni-codebase-audit-fixes.md  2026-03-21-intelligent-llm-layer.md
evals/: runner.rs
evals/fixtures/: concise_response.yaml  critic_accepts_safe_tool_call.yaml  critic_flags_hardcoded_credentials.yaml  critic_flags_todo_leftover.yaml  critic_rejects_path_traversal.yaml  critic_rejects_rm_rf.yaml  critic_rejects_security.yaml  critic_rejects_sudo.yaml  edge_empty_input.yaml  edge_prompt_injection.yaml  edge_unicode_input.yaml  edge_very_long_input.yaml  executor_bash_compile_test.yaml  executor_edit_file_old_text.yaml  executor_file_not_found_graceful.yaml  executor_multi_tool_chain.yaml  executor_read_before_edit.yaml  executor_search_before_edit.yaml  executor_uses_tools.yaml  executor_write_file_new.yaml  no_comfort_phrasing.yaml  planner_clarifies_ambiguous.yaml  planner_decomposes.yaml  planner_orchestration_needed.yaml  planner_read_before_write.yaml  planner_test_after_change.yaml  planner_tool_strategy.yaml  (+5 more)
oni-playground/: prompt.md
scripts/: oni-servers.sh
src/: lib.rs  main.rs  server_manager.rs
tests/: agent_tools.rs  config_loading.rs  context_engine.rs  db_schema.rs  eval_fixtures.rs  llm_integration.rs  memory_tests.rs  neo4j_tests.rs  pipeline_tests.rs  run_tasks.rs  server_manager_tests.rs
(+27 files in other folders)
