[workspace]
resolver = "2"
members = [
    "crates/oni-core",
    "crates/oni-llm",
    "crates/oni-agent",
    "crates/oni-context",
    "crates/oni-db",
    "crates/oni-tui",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.33", features = ["bundled", "modern_sqlite"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
notify = "7"

[package]
name = "oni"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oni"
path = "src/main.rs"

[dependencies]
sysinfo = "0.34"
oni-core = { path = "crates/oni-core" }
oni-llm = { path = "crates/oni-llm" }
oni-agent = { path = "crates/oni-agent" }
oni-tui = { path = "crates/oni-tui" }
oni-db = { path = "crates/oni-db" }
oni-context = { path = "crates/oni-context" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
toml.workspace = true
dirs.workspace = true
notify.workspace = true
libc = "0.2"
reqwest.workspace = true
which = "7"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid.workspace = true
