[package]
name = "oni-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
oni-core = { path = "../oni-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sysinfo = "0.34"
libc = "0.2"
which = "7"
dirs.workspace = true
