[package]
name = "oni-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
oni-core = { path = "../oni-core" }
oni-llm = { path = "../oni-llm" }
oni-agent = { path = "../oni-agent" }
oni-db = { path = "../oni-db" }
oni-context = { path = "../oni-context" }
rusqlite.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tracing.workspace = true
color-eyre.workspace = true
tui-textarea = "0.7"
throbber-widgets-tui = "0.8"
serde_json = "1"
dirs.workspace = true
reqwest.workspace = true
walkdir = "2"
